--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ ul.nav.navbar-nav li a{
     width: 100%;
     display: inline-block;
     text-align: center;
-    font-family: Arial;    
+    font-family: Arial, Verdana, sans-serif;    
     background-color: rgba(0, 0, 0, .8);
     color: #fff;
     padding-bottom:25px;
@@ -288,7 +288,7 @@ ul.nav.navbar-nav li a{
 }
 .form-contato{
     margin-top: 50px;
-    padding-bottom: 50px;
+    /* padding-bottom: 50px; */
 }
 .form-contato input{
     padding: 10px 0px;
@@ -317,7 +317,7 @@ ul.nav.navbar-nav li a{
 .btn-align{
     width:100%;
     text-align: center;
-    padding-bottom: 50px;
+    /* padding-bottom: 50px; */
 }
 /**/
 /**/
@@ -439,9 +439,29 @@ section.header h1{
     display: inline-block;
 }
 .rodape{
-    background: rgba(255, 127, 80, .9);;
-    height: 40vh;
-    width:100%;
+    font-family: Verdana;
+    background: rgba(255, 127, 80, .9);
+    width:100%;    
+    display: inline-block;
+    text-align: center;
+    color: #fff;
+}
+.rodape-up .rodape-down{
+    width: 70%;
+    text-align: center;
+}
+.rodape-up{
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-break: break-all;
+}
+.rodape-up a{
+    margin: 0% 5%
+}
+#rights{
+    margin:15px;
 }
 @-webkit-keyframes circleBounce {
     0% {-webkit-transform: scale(0.9); opacity: 0;}
