--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,9 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 /* Header animation*/
-  
+.text-center{
+  text-align: center;
+}
 .bg-bubbles {
     position: absolute;
     top: 0;
@@ -30,7 +32,7 @@
     transition-timing-function: linear;
 }
 .bg-bubbles li:nth-child(1) {
-    left: 10%;  
+    left: 10%;
 }
 .bg-bubbles li:nth-child(2) {
     left: 20%;
@@ -119,7 +121,7 @@
         transform: translateY(-200vh) rotate(600deg);
     }
 }
-  
+
 /**/
 
 
@@ -170,7 +172,7 @@ ul.nav.navbar-nav li a{
     font-size: 3rem;
     text-decoration: none;
     text-shadow: -1px 0 #333, 0 1px #333, 1px 0 #333, 0 -1px #333;
-} 
+}
 #h-icon{
     position: fixed;
     top:10px;
@@ -205,7 +207,7 @@ ul.nav.navbar-nav li a{
 .container-fluid{
     width: 100%;
     display:flex;
-    justify-content: center;    
+    justify-content: center;
 }
 #title-tag,
 #title-message{
@@ -213,7 +215,7 @@ ul.nav.navbar-nav li a{
     font-size: 60px;
     color: #333;
 }
-#title-tag{    
+#title-tag{
     display: inline-block;
     position: absolute;
     top: 40%;
@@ -234,7 +236,7 @@ ul.nav.navbar-nav li a{
     width: 100%;
     display: inline-block;
     text-align: center;
-    font-family: Arial, Verdana, sans-serif;    
+    font-family: Arial, Verdana, sans-serif;
     background-color: rgba(0, 0, 0, .8);
     color: #fff;
     padding-bottom:25px;
@@ -254,7 +256,7 @@ ul.nav.navbar-nav li a{
     width: 100%;
     display: block;
     text-align: center;
-    font-family: Verdana;    
+    font-family: Verdana;
     height: 80vh;
 }
 .portifolio h2{
@@ -275,7 +277,7 @@ ul.nav.navbar-nav li a{
     width: 100%;
     display: block;
     text-align: center;
-    font-family: Arial;    
+    font-family: Arial;
     height: 35rem;
     background-color: rgba(0, 0, 0, .8);
     color: #fff;
@@ -346,34 +348,19 @@ section.header h1{
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-
-#scrollDown {
-    position: absolute;
-    bottom: 35px;
-    width: 6px;
-    height: 6px;
-    border: 3px solid #333;
-    border-top: none;
-    border-left: none;
-    cursor: pointer;
-    -webkit-transform: rotate(45deg);
-    -webkit-transform-origin: 50% 50%;
-}
-  
-#scrollDown:after {
-    cursor:pointer;
-    content: "";
-    display: block;
-    position: absolute;
-    top: calc(50% - 23px); /*circle = 1+50+1 = 52px*/
-    left: calc(50% - 23px); /*arrow = 3+3 = 6px*/
-    width: 50px;
-    height: 50px;
-    border: 1px solid rgba(255,255,255,.8);
-    border: 1px solid rgba(255, 127, 80, .7);;
-    border-radius: 50%;
-
-    -webkit-animation: circleBounce 1.2s linear infinite;  
+#scrollDown{
+  border-radius: 50%;
+  background: #333;
+  color: #fff;
+  z-index: 9999;
+  position:absolute;
+  bottom:40px;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  outline: none;
+  border: 0px;
+  transform: rotate(90deg);
 }
 
 .main-about{
@@ -469,7 +456,7 @@ section.header h1{
 .rodape{
     font-family: Verdana;
     background: rgba(255, 127, 80, .9);
-    width:100%;    
+    width:100%;
     height: 100%;
     display: inline-block;
     text-align: center;
@@ -494,6 +481,44 @@ section.header h1{
 #rights{
     margin:15px;
 }
+.portifolio_content{
+  margin-top: 25px;
+}
+.card-port img{
+  width: 100%;
+
+}
+.item{
+  display: inline-block;
+  margin: 30px 40px;
+  transition: all .4s ease-in-out;
+  filter: grayscale(1);
+}
+.item a{
+  color: #FF7F50;
+  text-decoration: none;
+}
+
+.item:hover{
+  filter: grayscale(0);
+  transform: scale(1.04);
+  box-shadow: 0px 0px 10px #ccc;
+  border-color: #FF7F50;
+}
+/* .card_title:hover{
+  background: rgba(0, 0, 0, .8);
+  color: #fff;
+} */
+.card-port{
+  width: 500px;
+  border:1px solid #ccc;
+  box-shadow: 0px 0px 10px #ccc;
+}
+.card_title{
+  border-top:1px solid #ccc;
+  padding:10px;
+  transition: all .2s ease-in-out;
+}
 @-webkit-keyframes circleBounce {
     0% {-webkit-transform: scale(0.9); opacity: 0;}
     20% {opacity: 0.5;}
@@ -501,12 +526,12 @@ section.header h1{
     80% {opacity: 0.5;}
     100% {-webkit-transform: scale(1.1); opacity:0;}
   }
-  
-  
+
+
 
 @media screen and (max-width:747px){
     #description{
-        display: inline-block;  
+        display: inline-block;
     }
     .photo{
         height: 65% !important;
