--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -358,7 +358,7 @@ section.header h1{
   color: #fff;
   z-index: 9999;
   position:absolute;
-  bottom:40px;
+  top: 90vh;
   width: 50px;
   height: 50px;
   cursor: pointer;
@@ -493,9 +493,10 @@ section.header h1{
 
 }
 .item{
-  display: inline-block;
-  margin: 30px 40px;
-  transition: all .4s ease-in-out;
+    display: inline-block;
+    margin: 30px 40px;
+    width: 30%;
+    transition: all .4s ease-in-out;
 }
 .item a{
   color: #FF7F50;
@@ -511,7 +512,7 @@ section.header h1{
   color: #fff;
 } */
 .card-port{
-  width: 500px;
+  width: 100%;
   border:1px solid #ccc;
   box-shadow: 0px 0px 10px #ccc;
 }
